[project]
name = "actuators"
version = "0.1.0"
description = "Slick API for controlling various robotic actuators"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annotated-types>=0.7.0",
    "python-can>=4.6.1"
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.20",
    "ty>=0.0.55",
]

[tool.ruff.lint]
ignore = [
    "F403"
]
